# descriptions-video-maker

./: .gitignore  LICENSE  README.md  main.py  manage.py  pyproject.toml
.github/workflows/: pytest.yml
projects/projectX/: descriptions.tsv  setting.json
projects/projectY/: descriptions.tsv  setting.json
setting/: descriptions.tsv  layer.json
src/: make_description_images.py  make_video.py
src/structures/: image_objects.py  project_objects.py  tsv_objects.py
src/utils/: __init__.py  operate_img.py  operate_json.py  operate_tsv.py
tests/: test_settings.py
