[tool.poetry]
name = "yokonagashi-video-maker"
version = "0.1.0"
description = ""
authors = ["elasticnet12345 <elasticnet1995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
